<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/title_statistics"
                        android:textColor="@color/black_green"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/cb_type_variety_and_rootstock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statistics_type_variety_and_rootstock"
                        android:textColor="@color/black_green"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/cb_planting_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statistics_planting_date"
                        android:textColor="@color/black_green"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/cb_health"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/health"
                        android:textColor="@color/black_green"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/cb_yield"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yield"
                        android:textColor="@color/black_green"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/cb_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/size"
                        android:textColor="@color/black_green"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/cb_growth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/growth"
                        android:textColor="@color/black_green"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/cb_for_replacement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statistics_for_replacement"
                        android:textColor="@color/black_green"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/b_show_results"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_results" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_orange" />

            <TextView
                android:id="@+id/tv_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingTop="5dp"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>