<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@color/light_green"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_orchard_cell"
        android:padding="1dp">

        <RelativeLayout
            android:id="@+id/rl_cell_orchard"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_orchard_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/iv_camera"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_camera"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/iv_gallery"
                android:contentDescription="@string/camera"
                android:padding="15dp"
                android:src="@drawable/ic_camera" />

            <ImageView
                android:id="@+id/iv_gallery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/iv_delete"
                android:contentDescription="@string/gallery"
                android:padding="15dp"
                android:src="@drawable/ic_image" />

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/delete"
                android:padding="15dp"
                android:src="@drawable/ic_delete" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>