<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_tree_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_green"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/tree_gallery"
        android:textColor="@color/black_green"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view_top_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tv_tree_gallery"
        android:background="@color/light_orange" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/rl_picture_options"
        android:layout_below="@+id/tv_tree_gallery"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="2dp" />

    <View
        android:id="@+id/view_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/rl_picture_options"
        android:background="@color/light_orange" />

    <RelativeLayout
        android:id="@+id/rl_picture_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/light_green"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_gallery_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/camera"
            android:padding="15dp"
            android:src="@drawable/ic_camera" />

        <ImageView
            android:id="@+id/iv_gallery_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/gallery"
            android:padding="15dp"
            android:src="@drawable/ic_image" />
    </RelativeLayout>

</RelativeLayout>